# Gables

./: .gitignore  README.md  build.gradle  expprep.sh  step_by_step.md
app/: Android.mk  Application.mk  CMakeLists.txt  build.gradle
app/jniLibs/local/armeabi-v7a/objs/roofline/src/main/jni/roofline/: Barrier.o.d  CPUdriver.o.d  CPUkernel.o.d  Utils.o.d
app/src/androidTest/java/com/google/gables/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: GPUkernel_template.comp
app/src/main/java/com/google/gables/: CPURoofline.java  DSPRoofline.java  GPURoofline.java  MainActivity.java  Roofline.java  SOCRoofline.java  Utils.java
app/src/main/java/com/google/gables/utils/: NonSwipeViewPager.java
app/src/main/jni/roofline/: Barrier.cpp  Barrier.hpp  CPUdriver.cpp  CPUdriver.hpp  CPUkernel.cpp  CPUkernel.hpp  DSPdriver.cpp  DSPdriver.hpp  GPUdriver.cpp  GPUdriver.hpp  SOCdriver.cpp  SOCdriver.hpp  Utils.cpp  Utils.hpp
app/src/main/jni/roofline/inc/: CPUdriver.hpp  CPUkernel.hpp  GPUdriver.hpp  Utils.hpp
app/src/main/jniLibs/armeabi-v7a/: rpcmem.h
app/src/main/python/gables/: gables_processor.py
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  fragment_cpu_roofline.xml  fragment_dsp_roofline.xml  fragment_gpu_roofline.xml  fragment_mixer_roofline.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  integers.xml  strings.xml  styles.xml
app/src/test/java/com/google/gables/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ndk/: Android.mk  Application.mk  Makefile  build-arm.sh  build-x86.sh
ndk/inc/: CPUdriver.hpp
ndk/src/: CPUdriver.cpp  CPUkernel.cpp
plotting/gnuplots/: band-vs-wss.gnu.template  band-vs-wss_max.gnu.template  flops-vs-wss.gnu.template
plotting/scripts/: gables.py
utils/plotting/: new-gables.ipynb
utils/plotting/gnuplots/: roofline.gnu.template
utils/plotting/scripts/: gables.py
